--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
               <h5>Self-driven, quick starter, passionate programmer with a curious mind who enjoys solving a complex and challenging real-world problems.</h5>
             </div>
             <div class="social">
-              <a href="http://linkedin.com" target="_blank">
+              <a href="https://www.linkedin.com/in/rishav-prakash-931729298/" target="_blank">
                 <button class="icon-btn linkedin">
                   <i class="fa fa-linkedin"></i>
                 </button>
@@ -443,11 +443,11 @@
               target="_blank">github.com/Rishav1809</a></a>
         </p>
         <p>
-          <a aria-label="View Varad on LinkedIn" href="http://linkedin.com" target="_blank"
+          <a aria-label="View Varad on LinkedIn" href="https://www.linkedin.com/in/rishav-prakash-931729298/" target="_blank"
             data-position="top" data-tooltip="View Varad on LinkedIn"
             class="btn-floating btn-large waves-effect waves-light blue-grey tooltipped"><i
-              class="fa fa-linkedin"></i><a aria-label="Varad on LinkedIn" href="http://linkedin.com"
-              class="hoverline" target="_blank">linkedin.com</a></a>
+              class="fa fa-linkedin"></i><a aria-label="Varad on LinkedIn" href="https://www.linkedin.com/in/rishav-prakash-931729298/"
+              class="hoverline" target="_blank">linkedin.com/in/rishav prakash</a></a>
         </p>
         <p>
           <a aria-label="View Varad on Instagram" href="https://www.instagram.com/rishav_1809/" target="_blank"
